# nERdy

./: CONTRIBUTING.md  README.md  config.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: __init__.py  graph_metrics_plotter.py  junction_analysis.py  junction_analysis_modules.py  segmentation_metrics_plotter.py
analysis/pickle_files/graph_measures/: confocal_ERnet_graph_err.pkl  sted_ERnetV2_graph_err.pkl  sted_ERnet_graph_err.pkl  sted_analyzer_graph_err.pkl  sted_nERdy+_graph_err.pkl  sted_nERdy_graph_err.pkl  sted_rtn_p4m_graph_err.pkl
analysis/pickle_files/segmentation_measures/: confocal_dice.pkl  confocal_f1.pkl  confocal_iou.pkl  sted_dice.pkl  sted_f1.pkl  sted_iou.pkl
examples/: README.md  run_inference.py  train_custom.py
nERdy/: Vessel2d.m  __init__.py  nerdy_runner.py  preprocess.py  run_jerman_vess.py
nERdy+/: __init__.py  config.ini  dataloader.py  inference.py  model.py  postprocessing.py  train.py  utils.py
nERdy+/groupy/: README.md
nERdy+/groupy/garray/: C4_array.py  D4_array.py  Z2_array.py  matrix_garray.py  p4_array.py  p4m_array.py
pickles/: confocal_Analyzer_graph_err.pkl  confocal_ERnetV2_graph_err.pkl  confocal_nERdy+_graph_err.pkl  confocal_nERdy_graph_err.pkl
test/: __init__.py  test_graph_metrics_plotter.py  test_segmentation_metrics_plotter.py
